TEST_PROGRAMS/INVALID/09/non-name.go
package nonname

func main() {
	(a), b := 1, 2
}
